# Axon-NPU-Guide

./: .gitignore  README.md  max_freq.sh  min_freq_set.sh
examples/: count_people.py
examples/CNN_model_base/: CMakeLists.txt  main.cpp
examples/CNN_model_base/old/: CNN_model.cpp
examples/CNN_model_base/src/: CNN_model.cpp  CNN_model.h
examples/CNN_model_base/utils/: structs.h  sync_frames_queue.h  thread_timer.cpp  thread_timer.h
examples/Massively Multilingual Speech (text-to-speech)/: run_mms_tts.py
examples/depth_sensing/: README.md  convert_glpn_rknn.py  inference_rk3588.py
examples/fastsam_nanodet_yolov8n/: README.md  dynamic_tri_infer.py  fastsam_multicore.py  nanodet_multicore.py  yolo_multicore.py
examples/fastsam_nanodet_yolov8n/fastsam/: convert_onnx_to_rknn.py  fastsam_multicore.py  remove_fastsam_postprocess.py
examples/fastsam_nanodet_yolov8n/nanodet/: nanodet2rknn.py  nanodet_multicore.py  requirements.txt
examples/fastsam_nanodet_yolov8n/yolov8n/: yolo_multicore.py
examples/mobilenetv2-multibatch/: README.md  export_rknn.py  mobilenetv2-12-b4.rknn  mobilenetv2.py
examples/mobilenetv2-multibatch/dataset-mobil/: dataset.txt
examples/object_detection_cpp/: CMakeLists.txt  README.md  main.cc  object_detection.cc  object_detection.h  sync_frames_queue.h  thread_timer.cc
examples/rkllm/: .gitignore  README.md  dataset.json  inference.cpp  inference.py
examples/rknpu_and_hailo/: multi_cam_stream.py  object_detection_utils.py  utils.py
examples/welding_defects/cpp_example/: CMakeLists.txt  README.md  compile.sh  defect_detection.cc  defect_detection.h  main.cc  sync_frames_queue.cc  thread_timer.h
examples/yolo11_pose_estimation_cpp/: CMakeLists.txt  compile.sh  main.cc
examples/yolo11_pose_estimation_cpp/src/: pose_estimation.cc  pose_estimation.h
examples/yolo11_pose_estimation_cpp/utils/: sync_frames_queue.cc  threadTimer.cc  threadTimer.h
examples/yolo_models/: .gitignore  README.md  export_rknn.py  export_yolo.py  modify_onnx.py  prune_postprocess_from_yolo.py  requirements.txt  yolo_modifier.py
examples/yolov8-11_model_conversion_n_deployment/: README-AXON.md  README.md
examples/yolov8-11_model_conversion_n_deployment/script/: axon_env_setup.sh  convert_yolo11n_to_rknn.sh  convert_yolov8n_to_rknn.sh
examples/yolov8-11_model_conversion_n_deployment/utils/: onnx2rknn.py  removenodes.py  removenodes11n.py  rknn_inference.py  static2dynamic.py
